# stackchan-mcp

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  run_bridge.py  start-http.sh  start-voice-bridge.sh  start-voice-upload.sh
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  codeql.yml  security.yml
deploy/macos/: README.md  stackchan-voice-upload.plist.example
docs/: audio-playback-noise-troubleshooting-2026-05-28.md  consecutive-audio-troubleshooting-2026-07-03.md  development-guide.md  http-api.md  mcp-client-setup.md  pcm-playback-stutter-troubleshooting-2026-07-04.md  servo-troubleshooting-2026-05-16.md  tailscale-deployment.md
firmware/: config.h.example  platformio.ini
firmware/src/: audio_gate.cpp  audio_gate.h  camera_service.cpp  config_defaults.h  config_loader.h  face_names.cpp  face_names.h  face_service.cpp  face_service.h  http_server.cpp  main.cpp  mic_service.cpp  mic_service.h  pcm_stream_service.cpp  pcm_stream_service.h  playback_service.cpp  playback_service.h  queue_manager.cpp  servo_service.cpp  servo_service.h  wifi_manager.cpp  wifi_manager.h  ws_client_service.cpp  ws_client_service.h
mcp-server/: server.py
mcp_server/: audio_processing.py  audio_server.py  face_tracker.py  mcp_tools.py  server.py  stackchan_client.py  stackchan_config.py  telemetry.py  ws_bridge.py
scripts/: ci_security_audit.py  stackchan_frontend_session.py  stackchan_frontend_wake.py  stackchan_voice_bridge.py  stackchan_voice_upload_server.py
tests/: test_mcp_server.py
