[project]
name = "stackchan-tools"
version = "0.1.0"
description = "Host-side tooling for the Stack-chan voice avatar."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.10",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.pyright]
include = ["mcp_server", "scripts"]
exclude = ["firmware", ".venv"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.coverage.run]
branch = true
source = ["mcp_server", "scripts"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "firmware/.pio",
    "mcp_server/__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "E501",
]
