[project]
name = "stackchan-tools"
version = "0.1.0"
description = "Host-side tooling for the Stack-chan voice avatar."
requires-python = ">=3.11"
dependencies = [
    "mcp==1.27.1",
    "requests==2.34.2",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pyright==1.1.411",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "ruff==0.15.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.pyright]
include = ["mcp_server", "scripts"]
exclude = ["firmware", ".venv"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.coverage.run]
branch = true
source = ["mcp_server", "scripts"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "firmware/.pio",
    "mcp_server/__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "S"]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"scripts/stackchan_voice_upload_server.py" = ["S105"]
"tests/**" = ["S101", "S105", "S106", "S108"]
